# src/core/iPath.Application/Features/ServiceRequests/Queries/GetAdjacentServiceRequestId.cs
@@ -1,0 +1,7 @@
+namespace iPath.Application.Features.ServiceRequests;
+
+public record GetAdjacentServiceRequestIdQuery(
+    Guid CurrentId,
+    int Direction,
+    GetServiceRequestsQueryBase Query
+) : IRequest<GetAdjacentServiceRequestIdQuery, Task<Guid?>>;
